BE/Aucation_chat/src/main/java/com/example/aucation_chat/common/error/UnAuthorizedException.java
package com.example.aucation_chat.common.error;

public class UnAuthorizedException extends ApplicationException {

    public UnAuthorizedException(ApplicationError error) {
        super(error);
    }
}
